View states (empty, loading, error, content).

--- a/iOS/yahna/en.lproj/Localizable.strings
+++ b/iOS/yahna/en.lproj/Localizable.strings
@@ -14,3 +14,6 @@
 "jobStoriesViewTitle" = "Jobs";
 
 "closeWebViewButtonTitle" = "Done";
+
+"errorMessage" = "Please verify your network connection";
+"emptyViewMessage" = "There are no stories here yet";
