--- a/iOS/yahna/es.lproj/Localizable.strings
+++ b/iOS/yahna/es.lproj/Localizable.strings
@@ -14,3 +14,6 @@
 "jobStoriesViewTitle" = "Trabajo";
 
 "closeWebViewButtonTitle" = "Cerrar";
+
+"errorMessage" = "Por favor verifica tu conexión";
+"emptyViewMessage" = "No hay nada aqui";
